fullSandbox11072023/force-app/main/default/objects/Contract_Sales__c/Contract_Sales__c.object-meta.xml
<CustomObject>
    <label>Contract Sales</label>
    <nameField>
        <displayFormat>CSales-{0000000}</displayFormat>
        <label>Contract Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>