fullSandbox11072023/force-app/main/default/objects/Contract_Sales__c/fields/CFYTD__c.field-meta.xml
<CustomField>
    <fullName>CFYTD__c</fullName>
    <label>CFYTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>