fullSandbox11072023/force-app/main/default/objects/Contract_Sales__c/fields/GPO_Contract__c.field-meta.xml
<CustomField>
    <fullName>GPO_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GPO Contract</label>
    <referenceTo>GPO_Contract__c</referenceTo>
    <relationshipLabel>Contract Sales</relationshipLabel>
    <relationshipName>Contract_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>