fullSandbox11072023/force-app/main/default/objects/Contract_Sales__c/fields/PFY__c.field-meta.xml
<CustomField>
    <fullName>PFY__c</fullName>
    <label>PFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>