fullSandbox11072023/force-app/main/default/objects/Contract_Sales__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <length>64</length>
    <type>Text</type>
</CustomField>